--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
+      "parser": "@babel/eslint-parser",
+      "ecmaFeatures": {
+        "jsx": false
+      }
     },
     "rules": {}
   },
