feat: template da lista de usuários

--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
         "jsx": false
       }
     },
-    "rules": {}
+    "rules": {
+        "indent": ["error", 4]
+    }
   },
   "browserslist": [
     "> 1%",
